crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF101_RUF101_0.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:1:15
  |
1 | x = 2 # noqa: RUF940
  |               ^^^^^^
2 | x = 2 # noqa: RUF950
3 | x = 2 # noqa: RUF940, RUF950
help: Replace with `RUF950`
  |
  - x = 2 # noqa: RUF940
1 | x = 2 # noqa: RUF950
2 + x = 2 # noqa: RUF950
3 | x = 2 # noqa: RUF940, RUF950
  |

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:3:15
  |
1 | x = 2 # noqa: RUF940
2 | x = 2 # noqa: RUF950
3 | x = 2 # noqa: RUF940, RUF950
  |               ^^^^^^
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
help: Replace with `RUF950`
  |
2 | x = 2 # noqa: RUF950
  - x = 2 # noqa: RUF940, RUF950
3 + x = 2 # noqa: RUF950, RUF950
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
  |

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:4:23
  |
2 | x = 2 # noqa: RUF950
3 | x = 2 # noqa: RUF940, RUF950
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
  |                       ^^^^^^
5 | x = 2 # noqa: RUF940, RUF950, RUF940
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
help: Replace with `RUF950`
  |
3 | x = 2 # noqa: RUF940, RUF950
  - x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
4 + x = 2 # noqa: RUF950, RUF950, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
  |

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:5:15
  |
3 | x = 2 # noqa: RUF940, RUF950
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
  |               ^^^^^^
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
help: Replace with `RUF950`
  |
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
  - x = 2 # noqa: RUF940, RUF950, RUF940
5 + x = 2 # noqa: RUF950, RUF950, RUF940
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
  |

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:5:31
3 | x = 2 # noqa: RUF940, RUF950
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
  |                               ^^^^^^
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
help: Replace with `RUF950`
  |
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
  - x = 2 # noqa: RUF940, RUF950, RUF940
5 + x = 2 # noqa: RUF940, RUF950, RUF950
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:6:15
  |
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
  |               ^^^^^^
help: Replace with `RUF950`
  |
5 | x = 2 # noqa: RUF940, RUF950, RUF940
  - x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
6 + x = 2 # noqa: RUF950, RUF950, RUF940, RUF950
  |

RUF101 [*] `RUF940` is a redirect to `RUF950`
 --> RUF101_0.py:6:31
  |
4 | x = 2 # noqa: RUF950, RUF940, RUF950, RUF950, RUF950
5 | x = 2 # noqa: RUF940, RUF950, RUF940
6 | x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
  |                               ^^^^^^
help: Replace with `RUF950`
  |
5 | x = 2 # noqa: RUF940, RUF950, RUF940
  - x = 2 # noqa: RUF940, RUF950, RUF940, RUF950
6 + x = 2 # noqa: RUF940, RUF950, RUF950, RUF950
  |
