crates/ruff_linter/src/rules/ruff/snapshots/ruff_linter__rules__ruff__tests__RUF101_RUF101_1.py.snap
---
source: crates/ruff_linter/src/rules/ruff/mod.rs
---
RUF101 [*] `TCH002` is a redirect to `TC002`
 --> RUF101_1.py:5:15
  |
3 | RUF101 should trigger here because the TCH rules have been recoded to TC.
4 | """
5 | # ruff: noqa: TCH002
  |               ^^^^^^
6 |
7 | from __future__ import annotations
help: Replace with `TC002`
  |
4 | """
  - # ruff: noqa: TCH002
5 + # ruff: noqa: TC002
6 |
  |
